SignUp API imported

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="signUp"
+            type="com.example.chatroom.viewmodel.SignUpViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -43,7 +50,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/iransansmobilemedium"
                     android:gravity="right"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="@={signUp.username}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -60,7 +68,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/iransansmobilemedium"
                     android:gravity="right"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:text="@={signUp.email}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -79,7 +88,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/iransansmobilemedium"
                     android:gravity="right"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:text="@={signUp.password}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -88,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/iransansmobilemedium"
+                android:onClick="@{(view)->signUp.onSignUpClicked(view)}"
                 android:text="@string/sign_up"
                 app:layout_constraintTop_toBottomOf="@id/password_layout" />
 
