--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="controller"
+            type="com.example.chatroom.viewmodel.LoginController" />
+
+        <variable
+            name="login"
+            type="com.example.chatroom.viewmodel.LoginViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -44,7 +55,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/iransansmobilemedium"
                     android:gravity="right"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:text="@={login.username}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8mdp"
                 android:hint="@string/password"
+
                 app:errorEnabled="true"
                 app:layout_constraintTop_toBottomOf="@id/username_layout">
 
@@ -63,7 +76,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/iransansmobilemedium"
                     android:gravity="right"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:text="@={login.password}" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,6 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/iransansmobilemedium"
+                android:onClick="@{controller::onLoginClicked}"
                 android:text="@string/login"
                 app:layout_constraintTop_toBottomOf="@id/password_layout" />
 
