--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -66,7 +66,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8mdp"
                 android:hint="@string/password"
-
                 app:errorEnabled="true"
                 app:layout_constraintTop_toBottomOf="@id/username_layout">
 
@@ -105,6 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_8mdp"
                     android:fontFamily="@font/iransansmobilemedium"
+                    android:onClick="@{controller::onSignUpClicked}"
                     android:text="ثبت نام"
                     android:textColor="@color/purple_500" />
 
