--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/chatFragment">
 
     <fragment
         android:id="@+id/loginFragment"
@@ -31,4 +31,8 @@
         android:name="com.example.chatroom.view.fragments.navbar.RoomFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_room" />
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.example.chatroom.view.fragments.ChatFragment"
+        android:label="ChatFragment" />
 </navigation>
