--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="my_pink">#ff7876</color>
     <color name="selected">#222020</color>
+    <color name="received_message">#EFEFEF</color>
 </resources>
