App Navigation Setup

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,6 +3,9 @@
 
     <data>
 
+        <variable
+            name="controller"
+            type="com.example.chatroom.controller.ChatController" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -16,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8mdp"
+            android:onClick="@{controller::onBackClicked}"
             android:src="@drawable/ic_back"
             app:layout_constraintBottom_toBottomOf="@id/room_name_tv"
             app:layout_constraintStart_toStartOf="parent"
