--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="controller"
-            type="com.example.chatroom.viewmodel.LoginController" />
+            type="com.example.chatroom.controller.LoginController" />
 
         <variable
             name="login"
@@ -88,6 +88,12 @@
                 android:onClick="@{controller::onLoginClicked}"
                 android:text="@string/login"
                 app:layout_constraintTop_toBottomOf="@id/password_layout" />
+
+            <ProgressBar
+                android:id="@+id/loading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:id="@+id/sig_up_ll"
