--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -3,7 +3,7 @@
 
 
     <item
-        android:id="@+id/ic_chat"
+        android:id="@+id/room_destination"
         android:icon="@drawable/ic_chat" />
 
     <item
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_plus" />
 
     <item
-        android:id="@+id/ic_setting"
+        android:id="@+id/setting_destination"
         android:icon="@drawable/ic_setting" />
 
 </menu>
